--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([endianness], [1.0])
+AC_INIT([endianness], [1.0], [https://github.com/Maloux1/endianness.git])
 
 AM_INIT_AUTOMAKE([-Wall])
 
@@ -9,6 +9,8 @@ AM_PROG_AR([])
 LT_INIT
 
 AC_CHECK_HEADERS(stdint.h)
+
+AC_CONFIG_HEADERS([src/config.h])
 
 AC_CONFIG_FILES([
 src/Makefile
